@@ -3,19 +3,19 @@
 use lib 'inc';
 
 use Net::SSLeay;
-use Test::Net::SSLeay qw( data_file_path initialise_libssl );
+use Test::Net::SSLeay qw( data_file_path initialise_libssl is_libressl );
 
-plan tests => 52;
+plan tests => 53;
 
 initialise_libssl();
 
 is(Net::SSLeay::RAND_status(), 1, 'RAND_status');
 is(Net::SSLeay::RAND_poll(), 1, 'RAND_poll');
 
-# RAND_file_name
-my $file_name = Net::SSLeay::RAND_file_name(300);
-isnt($file_name, undef, 'RAND_file_name returns defined value');
-isnt($file_name, "", "RAND_file_name returns non-empty string: $file_name");
+# RAND_file_name has significant differences between the two libraries
+is_libressl() ?
+    test_rand_file_name_libressl() :
+    test_rand_file_name_openssl();
 
 # RAND_load_file
 my $binary_file      = data_file_path('binary-test.file');
@@ -34,6 +34,59 @@ if (Net::SSLeay::constant("LIBRESSL_VERSION_NUMBER"))
 test_rand_bytes();
 
 exit(0);
+
+# With LibreSSL RAND_file_name is expected to always succeed as long
+# as the buffer size is large enough. Their manual states that it's
+# implemented for API compatibility only and its use is discouraged.
+sub test_rand_file_name_libressl
+{
+    my $file_name = Net::SSLeay::RAND_file_name(300);
+    isnt($file_name, undef, 'RAND_file_name returns defined value');
+    isnt($file_name, q{}, "RAND_file_name returns non-empty string: $file_name");
+
+    $file_name = Net::SSLeay::RAND_file_name(2);
+    is($file_name, undef, "RAND_file_name return value is undef with too short buffer");
+
+    return;
+}
+
+# With OpenSSL there are a number of options that affect
+# RAND_file_name return value. Note: we override environment variables
+# temporarily because some environments do not have HOME set or may
+# already have RANDFILE set. We do not try to trigger a failure which
+# happens if there's no HOME nor RANDFILE. This is because
+sub test_rand_file_name_openssl
+{
+    my $file_name;
+    local %ENV = %ENV;
+    delete $ENV{RANDFILE};
+
+    $ENV{HOME} = '/nosuchdir-1/home';
+    $file_name = Net::SSLeay::RAND_file_name(300);
+    if (Net::SSLeay::SSLeay() >= 0x10100006 && Net::SSLeay::SSLeay() <= 0x1010000f)
+    {
+	# This was broken starting with 1.0.0-pre6 and fixed after 1.0.0
+	is($file_name, q{}, "RAND_file_name return value is empty and doesn't include '.rnd'");
+    } else {
+	like($file_name, qr/\.rnd/s, "RAND_file_name return value '$file_name' includes '.rnd'");
+    }
+
+    my $randfile = '/nosuchdir-2/randfile';
+    $ENV{RANDFILE} = $randfile;
+    $file_name = Net::SSLeay::RAND_file_name(300);
+    is($file_name, $randfile, "RAND_file_name return value '$file_name' is RANDFILE environment value");
+
+    # RANDFILE is longer than 2 octets. OpenSSL 1.1.0a and later
+    # return undef with short buffer
+    $file_name = Net::SSLeay::RAND_file_name(2);
+    if (Net::SSLeay::SSLeay() < 0x1010001f) {
+	is($file_name, q{}, "RAND_file_name return value is empty string with too short buffer");
+    } else {
+	is($file_name, undef, "RAND_file_name return value is undef with too short buffer");
+    }
+
+    return;
+}
 
 sub test_rand_bytes
 {
